fix z-index

--- a/src/pages/MainCourseViewPage/MainCourseViewPage.scss
+++ b/src/pages/MainCourseViewPage/MainCourseViewPage.scss
@@ -15,6 +15,7 @@
 		position: sticky;
 		top: 0;
 		left: 0;
+		z-index: 1;
 	}
 	& &__header-bgc {
 		background-color: #1c1d1f;
@@ -38,6 +39,7 @@
 		position: absolute;
 		left: 780px;
 		top: 0;
+		z-index: 2;
 	}
 
 	& &__content {
